[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/press_start_2p/PressStart2P.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/press_start_2p/PressStart2P.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 3 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
visible = true
margin_right = 400.0
margin_bottom = 300.0
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupDialog/MarginContainer"]
margin_right = 360.0
margin_bottom = 260.0

[node name="Title" type="RichTextLabel" parent="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Test Title"

[node name="Text" type="RichTextLabel" parent="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 360.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_text = "Quia quas corrupti saepe asperiores. Iste nihil ab dolorem aut ab quis atque maiores. Sint at voluptatum eum qui nobis."
text = "Quia quas corrupti saepe asperiores. Iste nihil ab dolorem aut ab quis atque maiores. Sint at voluptatum eum qui nobis."

[node name="Button" type="Button" parent="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 360.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[connection signal="about_to_show" from="CanvasLayer/PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="popup_hide" from="CanvasLayer/PopupDialog" to="." method="_on_PopupDialog_popup_hide"]
[connection signal="pressed" from="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
